--- a/site/index.html
+++ b/site/index.html
@@ -4,10 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
+    
+    <!--title-->
+    <title>Sample Website</title>
+
+    <!--favicon-->
+    <link rel="stylesheet" href="/img/favicon.ico">
+
+    <!--google font-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet"> 
+
+    <!--bootStrap CSS-->
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+
+    <!--style CSS-->
+    <link rel="stylesheet" href="/css/style.css">
+
+
 </head>
 <body>
-    <h1>Starting</h1>
-    <h1>I enjoy working with git. IT'S AWESOME!!!!!</h1>
+
+    <!-- <i class="fa fa-laptop fa-5x"></i> -->
+
+    <!--jQuery-->
+    <link rel="stylesheet" href="js/jquery.js">
+
+
+
+
+
+
+
+
+
+
+    <!--Home-->
+    <section id="home">
+        <div id="home-cover">
+            <div id="home-content-box">
+                <div id="home-content-box-inner">
+                    <div id="home-heading">
+                        <h3>Watch Out! <br>Sample project is coming!</h3>
+                    </div>
+                    <div id="home-btn">
+                        <a class="btn btn-lg" href=""></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
 </body>
 </html>
