styling home section part 1.

--- a/site/index.html
+++ b/site/index.html
@@ -30,9 +30,8 @@
     <!--jQuery-->
     <link rel="stylesheet" href="js/jquery.js">
 
-
-
-
+    <!--bootStrap JS-->
+    <link rel="stylesheet" href="/js/bootstrap/bootstrap.min.js">
 
 
 
@@ -48,7 +47,8 @@
                         <h3>Watch Out! <br>Sample project is coming!</h3>
                     </div>
                     <div id="home-btn">
-                        <a class="btn btn-lg" href=""></a>
+                        <a class="btn btn-lg" href="#work" role="button" title="View My Work">View My Work</a>
+                        
                     </div>
                 </div>
             </div>
