changes are  made on the home cover

--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/img/favicon.ico">
 
     <!--google font-->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet"> 
 
     <!--bootStrap CSS-->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
@@ -41,7 +41,7 @@
     <!--Home-->
     <section id="home">
         <div id="home-cover">
-            <div id="home-content-box">
+            <div id="home-content-box" class="text-center">
                 <div id="home-content-box-inner">
                     <div id="home-heading">
                         <h3>Watch Out! <br>Sample project is coming!</h3>
