finished SampleWeb home. Suspending the project for the time being.

--- a/site/index.html
+++ b/site/index.html
@@ -34,7 +34,7 @@
 
     <!--Home-->
     <section id="home">
-      <div id="home-cover">
+      <div id="home-cover" class="bg-parallex">
         <div id="home-content-box" class="text-center">
           <div id="home-content-box-inner">
             <div id="home-heading">
@@ -42,7 +42,10 @@
             </div>
             <div id="home-btn">
               <a
-                class="btn btn-lg btn-general btn-white"
+                class="
+                  btn btn-lg btn-general btn-white
+                  animate__animated animate__bounce
+                "
                 href="#work"
                 role="button"
                 title="View My Work"
@@ -53,5 +56,11 @@
         </div>
       </div>
     </section>
+
+    <!--temporary space-->
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
   </body>
 </html>
